resolviendo deuda tecnica pt2  (creo que alguien mas la resolvio)